Do not fetch all the data at once to offload db cpu